--- a/styles.css
+++ b/styles.css
@@ -26,16 +26,35 @@ img {
 }
 
 .resturant-cards {
-  padding: 15px;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
 }
 
 .cards {
-  border: 1px solid black;
-  height: fit-content;
-  width: 200px;
-  display: flex;
-  flex-direction: column;
+  width: 300px;
+  margin-bottom: 20px;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+
+  background-color: #ffffff;
+  transition: transform 0.2s ease;
+}
+
+.restaurant-card-image {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 10px 10px 0 0;
+}
+
+.restaurant-card-content {
+  padding: 10px;
+}
+
+.restaurant-card-name {
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 5px;
 }
