--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,9 @@ img {
 .header > ul > li {
   display: inline-block;
   margin-left: 20px;
+  text-decoration: none;
+  color: white;
+  cursor: pointer;
 }
 
 .resturant-cards {
