--- a/index.css
+++ b/index.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 * {
   margin: 0;
   padding: 0;
@@ -11,7 +15,7 @@
   color: #fff;
 }
 
-img {
+.logo {
   width: 150px;
   height: 40px;
   border-radius: 10px;
